# NaviX

./: CMakeLists.txt  README.md  package.xml  push.sh
3rd/: CMakeLists.txt
config/: .gitkeep~
docs/: CMakeLists.txt
include/amcl/: amcl.h
include/amcl/amcl/map/: map.h
include/amcl/amcl/sensors/: amcl_laser.h
include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
include/hokuyo/: HokuyoConfig.h  hokuyo.h
include/joy/: joy.h
include/map_server/: map_saver.h
include/move_base/: move_base.h
include/serial/: hardwareSerial.h  serial.h
include/serial/msgs/: OdometryMsg.hpp  VelocityMsg3.hpp  VelocityMsg4.hpp
include/serial/serial/: duration.cpp  duration.h  log.h  msg.h  node_handle.h  publisher.h  rtime.cpp  rtime.h  subscriber.h
include/thread_assist/: thread_assist.hpp
iterpreter/: CMakeLists.txt
modules/: CMakeLists.txt
modules/3rd/: CMakeLists.txt
modules/driver/: CMakeLists.txt
modules/driver/joystick/: CMakeLists.txt
modules/driver/joystick/include/joy/: joy.h
modules/driver/joystick/src/: joy.cpp  joy_node.cpp
modules/driver/serial/: CMakeLists.txt  package.xml  serial.cpp
modules/driver/serial/config/: serial.bash  serial.launch
modules/driver/serial/udev/: 99-BCB.rules  99-BCB.rules~  install.sh
modules/driver/urg_node/: CMakeLists.txt
modules/driver/urg_node/include/urg_node/: urg_node_driver.h
modules/driver/urg_node/src/: CMakeLists.txt~  getID.cpp  urg_c_wrapper.cpp  urg_node.cpp  urg_node_driver.cpp
modules/driver/urg_node/urg_c/: CMakeLists.txt
modules/log/: CMakeLists.txt  CMakeLists.txt~
modules/map/: CMakeLists.txt
modules/map/costmap_2d/: CMakeLists.txt  package.xml
modules/map/map_server/: CMakeLists.txt
modules/map/map_server/src/: main.cpp  map_saver.cpp
modules/map/voxel_grid/: CMakeLists.txt
modules/move_base/: CMakeLists.txt
modules/move_base/move_base/: CMakeLists.txt
modules/move_base/move_base/include/move_base/: move_base.h
modules/move_base/move_base/src/: move_base.cpp
modules/move_base/nav_core/: CMakeLists.txt
modules/msgs/: CMakeLists.txt
modules/msgs/navigation_msgs/: CMakeLists.txt
modules/planner/: CMakeLists.txt
modules/planner/base_local_planner/: CMakeLists.txt
modules/planner/dwa_local_planner/: CMakeLists.txt
modules/planner/global_planner/: CMakeLists.txt
modules/planner/navfn/: CMakeLists.txt
modules/planner/simple_local_planner/: CMakeLists.txt  README.md  package.xml
modules/planner/simple_local_planner/cfg/: simple_local_planner.cfg  simple_local_planner.cfg~
modules/planner/simple_local_planner/src/: pid.h  pure_pursuit.h  simple_local_planner.cpp
modules/public/: CMakeLists.txt
modules/public/thread_assist/: CMakeLists.txt  thread_assist.cpp  thread_assist.h  thread_assist.hpp
modules/recovery/: CMakeLists.txt
modules/recovery/clear_costmap_recovery/: CMakeLists.txt
modules/recovery/move_slow_and_clear/: CMakeLists.txt
modules/recovery/rotate_recovery/: CMakeLists.txt
modules/slam/: CMakeLists.txt  main.cpp  package.xml~
modules/slam/amcl/: CMakeLists.txt  amcl.cpp
modules/slam/amcl/include/amcl/: amcl.h
modules/slam/amcl/map/: CMakeLists.txt
modules/slam/amcl/pf/: CMakeLists.txt  pf.c  pf_pdf.c  pf_vector.c
modules/slam/amcl/sensors/: CMakeLists.txt
modules/slam/gmapping/: CMakeLists.txt  package.xml~
modules/slam/gmapping/gridfastslam/: CMakeLists.txt  gridslamprocessor.cpp
modules/slam/gmapping/openslam/: CMakeLists.txt  package.xml  slam_gmapping.cpp
modules/slam/gmapping/scanmatcher/: CMakeLists.txt
modules/slam/gmapping/sensor/sensor_base/: CMakeLists.txt
modules/slam/gmapping/sensor/sensor_odometry/: CMakeLists.txt
modules/slam/gmapping/sensor/sensor_range/: CMakeLists.txt
modules/slam/gmapping/utils/: CMakeLists.txt  stat.cpp
modules/slam/include/amcl/: amcl.h
modules/slam/include/gmapping/openslam/: slam_gmapping.h
modules/test/: CMakeLists.txt  package.xml  package.xml~
modules/test/src/: test.cpp
modules/visualize/: CMakeLists.txt
navix/: CMakeLists.txt  package.xml1
platform/: CMakeLists.txt
script/: CMakeLists.txt  CMakeLists.txt~
script/launch/: package.xml
script/launch/launch/: amcl_demo.launch  gmapping_demo.launch  robot_diff_drive_in_stage.launch
script/launch/launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml
script/launch/maps/: map.pgm
script/launch/param/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  simple_local_planner.yaml
script/launch/param/MoveControlConfig/: MoveControlConfig.xml
script/launch/param/lcm/: lcm_config.xml  lcm_defalut_config.xml  lcm_interior_config.xml
script/launch/param/param/: costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
script/launch/param/path/: path_config.xml
script/launch/script/: auto_begin.sh  auto_begin1.sh  chmod.py  init (copy).launch  init.launch  shut_down_all_node.py  shut_down_all_node.sh  shut_down_all_node1.py  shut_down_all_node1.sh  start_run_mode.launch  start_run_mode.sh  start_scan_mode.launch  start_scan_mode.sh
script/launch/xmap/: xmap.py
startup/: CMakeLists.txt  package.xml  package.xml~
startup/src/: startup.cpp  thread_group.hpp
utils/: CMakeLists.txt  package.xml
utils/path_record/: record_path.py
utils/udev/: 96-hokuyo.rules  96-hokuyo.rules~  99-turtlebot3-cdc.rules  99-turtlebot3-cdc.rules~  install.sh
