<package>
  <name>NaviX</name>
  <version>1.0.0</version>
  <description>Navix for wellcasa robotics</description>
  <maintainer email="ww@ww.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <author>wellcasa</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
