<?xml version="1.0"?>
<package>
  <name>openslam</name>
  <version>0.0.1</version>
  <description>lib of OpenSLAM</description>

  <maintainer email="bailiqun@gmail.com">wellcasa</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>geometry_msgs</run_depend> 
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>rosbag_storage</run_depend>
</package>
